src/test/ui/allocator/two-allocators.stderr
error: cannot define multiple global allocators
  --> $DIR/two-allocators.rs:6:1
   |
LL | static A: System = System;
   | -------------------------- previous global allocator defined here
LL | #[global_allocator]
   | ------------------- in this procedural macro expansion
LL | static B: System = System;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot define a new global allocator
   |
   = note: this error originates in the attribute macro `global_allocator` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

